@@ -609,3 +609,7 @@ no_cross_shore_detection = false
 ; Notes: (1) If you set this value >= 4, the map view on the city screen will be zoomed out when you enter it. Otherwise it's not possible to show the
 ; entire work area. You can zoom back in by pressing Z. (2) This option has a minimum value of 1 and a maximum of 7.
 city_work_radius = 2
+
+; If true, cities will not be able to work tiles in the extended work area unless those tiles are under their direct cultural influence. E.g., in
+; order to work tiles in its third ring, a city would have to be at a cultural level of at least three (2 border expansions).
+limit_working_extended_area_by_cultural_level = false
